--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
     <!--Question 4-->
     <p><br>
     <b>Choose Your Favorite Dog Breeds (select all that apply):</b><br> 
-        <input type="checkbox" name="Corgi" id="question1" value="Corgi" />
+       <fieldset>
+        <input type="checkbox" name="breed1" value="Corgi"/>
         Corgi
-        <input type="checkbox" name="Golden" id="question1" value="Golden" />
+        <input type="checkbox" name="breed2" value="Golden"/>
        Golden
-        <input type="checkbox" name="Lab" id="question1" value="Lab" />
-       Lab
+        <input type="checkbox" name="breed3" value="Lab"/>
+       Lab</fieldset>
         
 
     <!--question 5-->
@@ -114,3 +115,4 @@
   </body>
 </html>
 {% endautoescape %}
+
