--- a/results.html
+++ b/results.html
@@ -11,6 +11,7 @@
     <p>
       There are {{total_responses}} responses in total
     </p>
+    RESULTS SUMMARY
     <pre>
       {{result_summary}}
     </pre>
@@ -28,7 +29,6 @@
       Raw survey response just for debugging: <pre>{{ survey_response }}</pre>
     {% endfor %}
   
-  <h1>Frank says {{Frank}}</h1>
 
   </body>
 </html>
